recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:-6: error: Missing closing brace `}' assumed here
try {
^remove:1: error: expected class or object definition
def remove(l:List[Int], v:Int): List[Int] = {
^