recursion.cons.lessons.recursion.cons.Remove.scala.code
def remove(l:List[Int], v:Int): List[Int] = {
l match {
	case a::b if a==v => remove(b,v)
	case a::b 	   => a::remove(b,v)
	case _ 		   => Nil			 	
}
